--- a/package.json
+++ b/package.json
@@ -3,31 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^12.0.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.17",
-    "@fortawesome/free-solid-svg-icons": "^5.8.1",
-    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@ckeditor/ckeditor5-build-classic": "^12.4.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "bootstrap": "^4.3.1",
-    "bootstrap-fileinput": "^5.0.1",
-    "codemirror": "^5.45.0",
-    "fullpage.js": "^3.0.4",
-    "gsap": "^2.1.2",
+    "bootstrap-fileinput": "^5.0.6",
+    "codemirror": "^5.49.2",
+    "fullpage.js": "^3.0.7",
+    "gsap": "^2.1.3",
     "imagesloaded": "^4.1.4",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "ladda": "^2.0.1",
     "masonry-layout": "^4.2.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "react-loadable": "^5.5.0",
     "react-redux": "^6.0.1",
-    "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8",
-    "redux": "^4.0.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.2.0",
+    "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "sweetalert2": "^8.7.0",
+    "sweetalert2": "^8.18.6",
     "three": "^0.103.0",
-    "video.js": "^7.4.1"
+    "video.js": "^7.6.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,10 +45,11 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "autoprefixer": "^9.5.0",
+    "autoprefixer": "^9.7.0",
     "css-loader": "^2.1.1",
-    "popper.js": "^1.14.7",
+    "popper.js": "^1.16.0",
     "postcss-loader": "^3.0.0",
-    "redux-devtools": "^3.5.0"
+    "redux-devtools": "^3.5.0",
+    "sweetalert2-react-content": "^1.1.0"
   }
 }
