--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.0",
     "bootstrap-fileinput": "^5.0.8",
     "codemirror": "^5.53.2",
+    "easymde": "^2.10.1",
     "fullpage.js": "^3.0.8",
     "gsap": "^2.1.3",
     "imagesloaded": "^4.1.4",
